--- a/pp_rcc.tex
+++ b/pp_rcc.tex
@@ -156,12 +156,42 @@ But can we be more efficient whilst being generic?
 Yes. MCMC over execution traces.
 \end{frame}
 
-\begin{frame}{MCMC over execution traces}
-  \begin{block}{Notation and set up}
-    Represent the unconditioned PP as a parameterless function $f$
+\begin{frame}{PP via MCMC}
+  \begin{block}{}
+    Following Wingate et alia we represent the unconditioned PP as a parameterless function $f$
+    \newline
     
-    All random choices represented as $x_k \sim p_{t_k}(x|\theta_t)$.
+    Evaluating $f$ results in random choices which are denoted as
+    \begin{equation*}
+      x_k = f_{k|x_1,\ldots,x_{k-1}} \sim p_{t_k}(.|\theta_{k},x_1,\ldots,x_{k-1}).
+    \end{equation*}
+    
+    The density / probability of a particular evaluation is then
+    \begin{equation*}
+      p(x) = \prod_{k=1}^K p_{t_k}(x_k|\theta_{k},x_1,\ldots,x_{k-1}).
+    \end{equation*}
+    
+    We then perform MCMC over the $x_k$ \ie the execution trace.
+    
   \end{block}
+\end{frame}
+
+\begin{frame}{MCMC over execution traces}
+  \begin{enumerate}
+    \item Select a random $x_k = f_k$ in the execution trace
+    \item Propose a new value $x_k' \sim K_{t_k}(.|x_k,\theta_k)$
+    \item Run the program to determine all subsequent choices $(x_l' : l > k)$, reusing current choices where possible
+    \item Propose moving from the state $(x_1,\ldots,x_K)$ to $(x_1,\ldots,x_{k-1},x_k',\ldots,x_{K'}')$
+    \item Accept the change with the appropriate reversible jump MCMC acceptance probability, this includes terms like
+    \begin{enumerate}
+      \item $K_{t_k}(x_k'|x_k,\theta_k),\,K_{t_k}(x_k|x_k',\theta_k),\,p_{t_k}(x_k|\theta_{k},x_1,\ldots,x_{k-1})$
+      \item $\prod_{i=k}^K p_{t_i}(x_i|\theta_{i},x_1,\ldots,x_{i-1}),\,\prod_{i=k}^{K'} p_{t_i'}(x_i'|\theta_{i}',x_1,\ldots,x_{k-1},x_k',\ldots,x_{i-1}')$
+      \item \ie $\frac{K_{t_k}(x_k|x_k',\theta_k)\prod_{i=k}^{K'} p_{t_i'}(x_i'|\theta_{i}',x_1,\ldots,x_{k-1},x_k',\ldots,x_{i-1}')}{K_{t_k}(x_k'|x_k,\theta_k)\prod_{i=k}^K p_{t_i}(x_i|\theta_{i},x_1,\ldots,x_{i-1})}$
+    \end{enumerate}
+  \end{enumerate}
+\end{frame}
+
+\begin{frame}{Worked example}
 \end{frame}
 
 \begin{frame}{Further Generi inference methods}
@@ -174,7 +204,7 @@ Remember graphical models (fancy algorithms that work in certain model classes)
 Infer.net?
 \end{frame}
 
-\begin{frame}{Example: Mixture of Gaussians}
+\begin{frame}{Example: Mixture of Gaussians}-
   \begin{columns}
     \begin{column}{.5\textwidth}
       \begin{block}{Generative model}
