Basic MCMC trace example

--- a/pp_rcc.tex
+++ b/pp_rcc.tex
@@ -223,21 +223,15 @@
   \end{block}
 \end{frame}
 
-\begin{frame}{Can we be more efficient}
-MCMC in words.
-
-Start with a trace. (Picture)
-
-Propose a new trace by modifying one random choice (Picture)
-
-and sampling subsequent choices changed/altered by modification (Picture)
-
-Accept proposal using approriate RJ-MCMC acceptance probability
-
-\TBD{Work out where to mention the conditioning}
+\begin{frame}{Can we be more efficient?}
+  \begin{block}{  MCMC}
+    \vspace{0.5\baselineskip}
+    \centering
+    \input{figures/mcmc-trace-pictures.tex}
+  \end{block}
 \end{frame}
 
-\begin{frame}{Math}
+\begin{frame}{Math} 
 Same thing but replace pictures with math
 \end{frame}
 
