--- a/pp_rcc.tex
+++ b/pp_rcc.tex
@@ -250,38 +250,40 @@
 \end{frame}
 
 \begin{frame}{PP via MCMC - notation}
-  \TBD{Maybe include parameter of random bitstring for notational consistency}
   \begin{block}{}
-    Following Wingate et alia we represent the unconditioned PP as a parameterless function $f$
+    Following Wingate et alia \TBD{ref} we represent an unconditioned PP as a parameterless random function $f$ (or as a deterministic function which takes a source of randomness as an input)
     \newline
     
     Evaluating $f$ results in random choices which are denoted as
     \begin{equation*}
       x_k = f_{k|x_1,\ldots,x_{k-1}} \sim p_{t_k}(.|\theta_{k},x_1,\ldots,x_{k-1}).
     \end{equation*}
+    where $\theta_{k}$ represents parameters of the distribution not included in $(x_1,\ldots,x_{k-1})$.
+    \newline
     
     The density / probability of a particular evaluation is then
     \begin{equation*}
-      p(x) = \prod_{k=1}^K p_{t_k}(x_k|\theta_{k},x_1,\ldots,x_{k-1}).
+      p(x_1,\ldots,x_K) = \prod_{k=1}^K p_{t_k}(x_k|\theta_{k},x_1,\ldots,x_{k-1}).
     \end{equation*}
     
-    We then perform MCMC over the $x_k$ \ie the execution trace.
+    We then perform MCMC over the the execution trace $x = (x_1,\ldots,x_K)$.
     
   \end{block}
 \end{frame}
 
 \begin{frame}{MCMC over execution traces}
   \begin{enumerate}
-    \item Select a random $x_k = f_k$ in the execution trace
-    \item Propose a new value $x_k' \sim K_{t_k}(.|x_k,\theta_k)$
+    \item Select a random decision in the execution trace $x$
+    \begin{itemize}
+      \item{\eg $x_k = f_k$}
+    \end{itemize}
+    \item Propose a new value
+    \begin{itemize}
+      \item{\eg $x_k' \sim K_{t_k}(.|x_k,\theta_k)$}
+    \end{itemize}
     \item Run the program to determine all subsequent choices $(x_l' : l > k)$, reusing current choices where possible
     \item Propose moving from the state $(x_1,\ldots,x_K)$ to $(x_1,\ldots,x_{k-1},x_k',\ldots,x_{K'}')$
     \item Accept the change with the appropriate reversible jump MCMC acceptance probability
-    %\begin{itemize}
-      %\item $K_{t_k}(x_k'|x_k,\theta_k),\,K_{t_k}(x_k|x_k',\theta_k),\,p_{t_k}(x_k|\theta_{k},x_1,\ldots,x_{k-1})$
-      %\item $\prod_{i=k}^K p_{t_i}(x_i|\theta_{i},x_1,\ldots,x_{i-1}),\,\prod_{i=k}^{K'} p_{t_i'}(x_i'|\theta_{i}',x_1,\ldots,x_{k-1},x_k',\ldots,x_{i-1}')$
-      %\item \ie $\frac{K_{t_k}(x_k|x_k',\theta_k)\prod_{i=k}^{K'} p_{t_i'}(x_i'|\theta_{i}',x_1,\ldots,x_{k-1},x_k',\ldots,x_{i-1}')}{K_{t_k}(x_k'|x_k,\theta_k)\prod_{i=k}^K p_{t_i}(x_i|\theta_{i},x_1,\ldots,x_{i-1})}$
-    %\end{itemize}
   \end{enumerate}
   \begin{equation*}
     \frac{K_{t_k}(x_k|x_k',\theta_k)\prod_{i=k}^{K'} p_{t_i'}(x_i'|\theta_{i}',x_1,\ldots,x_{k-1},x_k',\ldots,x_{i-1}')}{K_{t_k}(x_k'|x_k,\theta_k)\prod_{i=k}^K p_{t_i}(x_i|\theta_{i},x_1,\ldots,x_{i-1})}
