--- a/pp_rcc.tex
+++ b/pp_rcc.tex
@@ -365,7 +365,7 @@ Only need to evaluate samples from non-parametric objext lazily
   \vspace{\baselineskip}
   \begin{center}
   {
-    {Note that the pseudo code makes\\conditional independence structure transparent}
+    {Note that the pseudo code makes the potentially ambiguous\\conditional independence structure transparent}
   }	
   \end{center}
   \vspace{-1\baselineskip}
